--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -101,4 +101,32 @@
 
     // border: 1px dotted rgba(255, 255, 255, 0.7);
   }
+
+  &__items {
+    display: flex;
+  }
+
+  &__item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // display: inline-block;
+  }
+
+  &__frame {
+    // position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    height: auto;
+  }
+
+  &__photo {
+    position: absolute;
+
+    inset: 0;
+
+    object-fit: cover;
+  }
 }
