--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -104,6 +104,7 @@
 
   &__items {
     display: flex;
+    justify-content: space-between;
   }
 
   &__item {
@@ -112,21 +113,24 @@
     justify-content: center;
     align-items: center;
     // display: inline-block;
+    overflow: hidden;
   }
 
   &__frame {
-    // position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    // display: block;
+    // width: 100%;
+    // height: 100%;
     height: auto;
+    z-index: 10;
   }
 
   &__photo {
     position: absolute;
-
+    width: 100%;
     inset: 0;
 
     object-fit: cover;
+    z-index: 5;
   }
 }
