--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,6 +1,6 @@
 .intro {
   position: relative;
-  height: 903px;
+  height: 888px;
 
 
   &::before {
@@ -14,18 +14,19 @@
     opacity: 0.7;
   }
 
-  &__background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
+  // &__background {
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
   &__img {
     position: absolute;
     width: 100%;
     height: 100%;
+    // max-width: 100%;
     inset: 0;
-    object-fit: cover;
+    // object-fit: cover;
     z-index: -1;
   }
 
@@ -62,6 +63,7 @@
     max-width: toRem(700);
 
     line-height: 136%;
+    letter-spacing: .7px;
     color: #fff;
     font-family: $secondFamily;
 
@@ -114,13 +116,18 @@
     align-items: center;
     // display: inline-block;
     overflow: hidden;
+
+    &:nth-child(odd) {
+      transform: rotate(-4.39deg);
+    }
+
+    &:nth-child(even) {
+      transform: rotate(3.75deg);
+    }
   }
 
   &__frame {
     position: relative;
-    // display: block;
-    // width: 100%;
-    // height: 100%;
     height: auto;
     z-index: 10;
   }
@@ -132,5 +139,9 @@
 
     object-fit: cover;
     z-index: 5;
+  }
+
+  &__bottom {
+    margin-top: toRem(70);
   }
 }
