--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -25,9 +25,10 @@
     width: 100%;
     height: 100%;
     // max-width: 100%;
-    inset: 0;
-    // object-fit: cover;
+    // inset: 0;
+    object-fit: cover;
     z-index: -1;
+    aspect-ratio: 2 / 1;
   }
 
   &__container {
@@ -142,6 +143,10 @@
   }
 
   &__bottom {
+    position: relative;
     margin-top: toRem(70);
   }
+
+
+  
 }
