--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,30 +9,43 @@
     @include adaptiveValue("height", 888, 300);
   }
 
-  // @media (max-width:$mobile){
-  //    height: auto; 
-  // }
+  &::before {
+    content: '';
+    position: absolute;
+    background: linear-gradient(180.00deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 100%);
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    pointer-events: none;
 
+    @media (max-width:$mobile) {
+      display: none;
+    }
+  }
 
 
 
   &__background {
-    position: relative;
 
-    &::before {
-      content: '';
-      position: absolute;
-      // background: linear-gradient(to right, transparent, black);
-      // background: linear-gradient(179.95deg, rgba(0, 0, 0, 0) -17.22%, rgba(0, 0, 0, 0.7) 99.96%);
-      background: linear-gradient(180.00deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 100%);
-      width: 100%;
-      height: 100%;
-      opacity: 0.7;
+    @media (max-width:$mobile) {
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        background: linear-gradient(180.00deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 100%);
+        width: 100%;
+        height: 100%;
+        opacity: 0.7;
+        pointer-events: none;
+        z-index: 1;
+      }
     }
   }
 
   &__img {
     position: absolute;
+    // display: block;
     width: 100%;
     height: 100%;
     // max-width: 100%;
@@ -42,6 +55,7 @@
 
     @media (max-width:$mobile) {
       position: static;
+      // z-index: 0;
     }
   }
 
