--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -157,7 +157,22 @@
       display: none;
 
       @media (max-width:$mobile) {
-        
+        display: flex;
+        padding: 10px 10px 10px 18px;
+        width: 100%;
+        height: 47px;
+        border-radius: 100px;
+
+        .intro__icon {
+          width: 34px;
+          height: 34px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #fff;
+          border-radius: 50%;
+        }
+
       }
 
     }
