--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -131,7 +131,6 @@
     background: $thirdColor;
     border-radius: 50%;
 
-
     font-family: $fontFamilyNr;
     font-weight: 700;
     font-size: 15px;
@@ -151,7 +150,6 @@
       width: toRem(150);
       height: toRem(150);
       flex: 0 0 150px;
-
     }
 
     @media (max-width:$mobile) {
@@ -163,6 +161,7 @@
 
       @media (max-width:$mobile) {
         display: flex;
+        justify-content: space-between;
         padding: 10px 10px 10px 18px;
         width: 100%;
         height: 47px;
