--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,6 +1,5 @@
 .intro {
   position: relative;
-  // height: 888px;
 
   margin-bottom: toRem(260);
 
@@ -32,6 +31,9 @@
     @media (max-width:$mobile) {
       position: relative;
 
+      border-radius: toRem(20);
+      overflow: hidden;
+
       &::before {
         content: '';
         position: absolute;
@@ -50,6 +52,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    // aspect-ratio: 320 / 247;
     z-index: -1;
 
     @media (max-width:$mobile) {
@@ -63,6 +66,7 @@
 
     @media (max-width:$mobile) {
       padding-top: toRem(130);
+      margin-bottom: 30px;
     }
   }
 
@@ -193,9 +197,15 @@
   }
 
   &__items {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     justify-content: space-between;
+    justify-items: center;
     gap: toRem(15);
+    
+    @media (max-width:$mobile){
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__item {
@@ -217,9 +227,6 @@
     &:nth-child(3) {
       margin-top: -20px;
     }
-
-
-
   }
 
   &__frame {
@@ -260,4 +267,14 @@
     position: absolute;
   }
 
+}
+
+
+
+.intro-mobile__container {
+  display: none;
+  
+  @media (max-width:$mobile){
+     display: block; 
+  }
 }
