--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -202,8 +202,8 @@
     justify-content: space-between;
     justify-items: center;
     gap: toRem(15);
-    
-    @media (max-width:$mobile){
+
+    @media (max-width:$mobile) {
       grid-template-columns: repeat(2, 1fr);
     }
   }
@@ -261,20 +261,61 @@
     top: 0;
     top: -17px;
     z-index: 50;
+
+    @media (max-width:$mobile) {
+      display: none;
+    }
+
+    &--mob {
+      display: none;
+
+      @media (max-width:$mobile) {
+        display: block;
+        position: absolute;
+        width: 100%;
+        z-index: 100;
+        top: -10px;
+        pointer-events: none;
+      }
+    }
   }
 
   &__value {
     position: absolute;
+
+    font-family: var(--third-family);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 107%;
+    color: $titleColor;
+
+    z-index: 100;
+    left: 16px;
+    // bottom: 0;
+    top: 290px;
+    top: 85%;
+
+    @media (max-width: toEm(700)) {
+      font-size: toRem(15);
+    }
+
+    @media (max-width:$mobileSmall) {
+      font-size: toRem(13);
+    }
+
+    @media (max-width: toEm(390)) {
+      font-size: toRem(10);
+    }
+
   }
 
 }
 
 
-
 .intro-mobile__container {
   display: none;
-  
-  @media (max-width:$mobile){
-     display: block; 
+
+  @media (max-width:$mobile) {
+    display: block;
   }
 }
