--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -323,3 +323,13 @@
     display: block;
   }
 }
+
+.intro__icon {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 50%;
+}
