--- a/src/scss/flatpoint.scss
+++ b/src/scss/flatpoint.scss
@@ -1,7 +1,17 @@
 .flatpoint {
+  position: relative;
+  background: url('@img/backg.png') center 0;
+  // background-size: cover;
+  padding-top: 536px;
+  margin-top: -300px;
 
-  background: url('@img/backg.png') 0 0 no-repeat;
-  background-size: cover;
+  &__line {
+    position: absolute;
+    top: 9.8%;
+    // right: 12.6%;
+    left: 50%;
+    transform: translate(-50%, 0px);
+  }
 
   /* .flatpoint__container */
   &__container {}
