--- a/src/scss/activities.scss
+++ b/src/scss/activities.scss
@@ -104,10 +104,12 @@
     line-height: 107%;
     color: var(--title-color);
     z-index: 100;
-    right: 39%;
+    // right: 39%;
     // left: 2%;
-    top: 81%;
+    // top: 81%;
     z-index: 10;
+    bottom: 0;
+    left: 0;
 
     @include adaptiveValue("font-size", 20, 11);
 
