--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -2,17 +2,22 @@
 // Сниппет (HTML): btn
 
 .button {
-	display: inline-flex;
+	display: flex;
 	align-items: center;
-	justify-content: center;
-	padding: 10px 30px;
-	border-radius: toRem(5);
-	// background-color: $brightGreenColor;
-	height: 47px;
-	
-	transition: all 0.3s;
+	padding: 10px 10px 10px 18px;
+	gap: toRem(10);
+	border-radius: 100px;
 
-	@include adaptiveValue("font-size", 20, 16);
+	font-family: var(--font-family-nr);
+	font-weight: 400;
+	line-height: 131%;
+	letter-spacing: -0.01em;
+	color: #fff;
+	justify-self: center;
+	background: var(--third-color);
+
+	@include adaptiveValue("font-size", 18, 12);
+
 	@include adaptiveValue("height", 65, 50);
 
 
