--- a/src/scss/flatpoint.scss
+++ b/src/scss/flatpoint.scss
@@ -45,9 +45,9 @@
 
     @include adaptiveValue("gap", 10, 5);
 
-    @media (min-width:$mobile) {
-      @include adaptiveValue("margin-bottom", 90, 30);
-    }
+    // @media (min-width:$mobile) {
+    //   @include adaptiveValue("margin-bottom", 90, 30);
+    // }
   }
 
   /* .flatpoint__item */
@@ -232,21 +232,21 @@
   /* .flatpoint__button */
   &__button {
     max-width: toRem(283);
-    display: flex;
-    align-items: center;
-    padding: 10px 10px 10px 18px;
-    gap: toRem(10);
-    border-radius: 100px;
+    // display: flex;
+    // align-items: center;
+    // padding: 10px 10px 10px 18px;
+    // gap: toRem(10);
+    // border-radius: 100px;
 
-    font-family: var(--font-family-nr);
-    font-weight: 400;
-    line-height: 131%;
-    letter-spacing: -0.01em;
-    color: #fff;
-    justify-self: center;
-    background: var(--third-color);
+    // font-family: var(--font-family-nr);
+    // font-weight: 400;
+    // line-height: 131%;
+    // letter-spacing: -0.01em;
+    // color: #fff;
+    // justify-self: center;
+    // background: var(--third-color);
 
-    @include adaptiveValue("font-size", 18, 12);
+    // @include adaptiveValue("font-size", 18, 12);
 
     @media (max-width:$mobile) {
       display: none;
