--- a/src/scss/activities.scss
+++ b/src/scss/activities.scss
@@ -6,9 +6,20 @@
 
   border: 1px solid red;
 
+  @include adaptiveValue("padding-top", 90, 80);
+
   // .activities__container
 
   &__container {}
+
+  &__button {
+    max-width: toRem(283);
+    @include adaptiveValue("margin-bottom", 150, 50);
+
+    @media (max-width:$mobile) {
+      display: none;
+    }
+  }
 
   // .activities__title
 
@@ -60,7 +71,9 @@
       }
     }
 
-    &:nth-child(3) {
+    &:nth-child(3),
+    &:nth-child(6),
+    &:nth-child(8) {
       .activities__value {
         left: 15%;
         padding-bottom: 12%;
@@ -80,12 +93,12 @@
       }
     }
 
-    &:nth-child(6) {
-      .activities__value {
-        left: 15%;
-        padding-bottom: 12%;
-      }
-    }
+    // &:nth-child(6) {
+    //   .activities__value {
+    //     left: 15%;
+    //     padding-bottom: 12%;
+    //   }
+    // }
 
     &:nth-child(7) {
       .activities__value {
@@ -94,12 +107,12 @@
       }
     }
 
-    &:nth-child(8) {
-      .activities__value {
-        left: 15%;
-        padding-bottom: 12%;
-      }
-    }
+    // &:nth-child(8) {
+    //   .activities__value {
+    //     left: 15%;
+    //     padding-bottom: 12%;
+    //   }
+    // }
 
     &:nth-child(odd) {
       .activities__value {
@@ -122,7 +135,7 @@
     border: 1px solid red;
     display: flex;
     // justify-content: flex-start;
-    justify-content: center;
+    // justify-content: center;
     align-items: flex-end;
     // overflow: hidden;
 
@@ -162,7 +175,11 @@
 
   // .activities__content
 
-  &__content {}
+  &__content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 20px;
+  }
 
   // .activities__left-side
 
@@ -170,7 +187,14 @@
 
   // .activities__subtitle
 
-  &__subtitle {}
+  &__subtitle {
+    font-weight: 700;
+    line-height: 118%;
+    letter-spacing: -0.03em;
+    color: $titleColor;
+
+    @include adaptiveValue("font-size", 40, 20);
+  }
 
   // .activities__text
 
@@ -178,29 +202,17 @@
 
   // .activities__right-side
 
-  &__right-side {}
+  &__right-side {
+    position: relative;
+
+    img {
+      osition: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+    }
+
+  }
 }
-
-.flatpoint {
-
-  // .flatpoint__button
-
-  &__button {}
-}
-
-.button {}
-
-.intro {
-
-  // .intro__icon
-
-  &__icon {}
-}
-
-.title-h2 {}
-
-.swiper {}
-
-.swiper-wrapper {}
-
-.swiper-slide {}
