--- a/src/scss/activities.scss
+++ b/src/scss/activities.scss
@@ -24,7 +24,7 @@
   // .activities__title
 
   &__title {
-    @include adaptiveValue("margin-bottom", 44, 25);
+    // @include adaptiveValue("margin-bottom", 44, 25);
   }
 
   // .activities__container--full
@@ -37,6 +37,8 @@
 
     margin-right: -15px;
     margin-left: -15px;
+
+    margin-bottom: toRem(96);
   }
 
   // .activities__slider
@@ -179,11 +181,16 @@
     display: grid;
     grid-template-columns: 50% 50%;
     gap: 20px;
+
+    border: 1px solid red;
   }
 
   // .activities__left-side
 
-  &__left-side {}
+  &__left-side {
+    padding-top: toRem(123);
+    max-width: 651px;
+  }
 
   // .activities__subtitle
 
@@ -204,14 +211,16 @@
 
   &__right-side {
     position: relative;
+    padding-bottom: 99%;
 
     img {
-      osition: absolute;
+      position: absolute;
       inset: 0;
       width: 100%;
       height: 100%;
       -o-object-fit: cover;
       object-fit: cover;
+      left: -92px;
     }
 
   }
