--- a/src/scss/activities.scss
+++ b/src/scss/activities.scss
@@ -38,7 +38,9 @@
     margin-right: -15px;
     margin-left: -15px;
 
-    margin-bottom: toRem(96);
+    // margin-bottom: toRem(96);
+  
+  @include adaptiveValue("margin-bottom", 96, 10);
   }
 
   // .activities__slider
@@ -179,10 +181,14 @@
 
   &__content {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 50% auto;
     gap: 20px;
 
-    border: 1px solid red;
+    // border: 1px solid red;
+
+    @media (max-width:$tablet){
+      grid-template-columns: 1fr;
+    }
   }
 
   // .activities__left-side
@@ -190,6 +196,7 @@
   &__left-side {
     padding-top: toRem(123);
     max-width: 651px;
+    // flex-shrink: 0;
   }
 
   // .activities__subtitle
@@ -201,26 +208,41 @@
     color: $titleColor;
 
     @include adaptiveValue("font-size", 40, 20);
+    @include adaptiveValue("margin-bottom", 45, 30);
   }
 
   // .activities__text
 
-  &__text {}
+  &__text {
+    max-width: toRem(426);
+
+    font-family: $secondFamily;
+    line-height: 136%;
+    color: $mainColor;
+
+    @include adaptiveValue("font-size", 18, 14);
+  }
 
   // .activities__right-side
 
   &__right-side {
     position: relative;
-    padding-bottom: 99%;
+    // padding-bottom: 85%;
 
     img {
       position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      -o-object-fit: cover;
-      object-fit: cover;
-      left: -92px;
+      // max-width: 100%;
+      // inset: 0;
+      // width: 100%;
+      // height: 100%;
+      // -o-object-fit: cover;
+      // object-fit: cover;
+      left: -202px;
+
+      @media (max-width:$tablet){
+        max-width: 100%;
+        left: 0;
+      }
     }
 
   }
