--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -4,7 +4,7 @@
 .button {
 	display: flex;
 	align-items: center;
-	padding: 10px 10px 10px 18px;
+	padding: 10px 18px;
 	gap: toRem(10);
 	border-radius: 100px;
 
@@ -31,3 +31,7 @@
 	// 	}
 	// }
 }
+
+
+
+
