--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -14,6 +14,7 @@
 	letter-spacing: -0.01em;
 	color: #fff;
 	justify-self: center;
+	justify-content: center;
 	background: var(--third-color);
 
 	@include adaptiveValue("font-size", 18, 12);
