--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -6,10 +6,10 @@
   letter-spacing: -0.03em;
   color: $titleColor;
 
-  @include adaptiveValue("font-size", 60, 16);
+  @include adaptiveValue("font-size", 60, 25);
 
   @media (max-width:$mobile) {
-    font-weight: 500;
+    // font-weight: 500;
   }
 }
 
